--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -71,7 +71,7 @@
                     </summary>
                     <div class="details-content">
                         {{#each papers}}
-                            {{#if isHighlighted}}
+                            {{#if highlight_title}}
                                 <article>
                                     <details class="article-expander">
                                         <summary class="article-expander-title">
