--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -1,63 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>{{site_title}}</title>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="robots" content="noindex, nofollow"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-    <link href="index.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"
-          integrity="sha384-R4558gYOUz8mP9YWpZJjofhk+zx0AS11p36HnD2ZKj/6JR5z27gSSULCNHIRReVs" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"
-          integrity="sha384-R4558gYOUz8mP9YWpZJjofhk+zx0AS11p36HnD2ZKj/6JR5z27gSSULCNHIRReVs" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"
-            integrity="sha384-z1fJDqw8ZApjGO3/unPWUPsIymfsJmyrDVWC8Tv/a1HeOtGmkwNd/7xUS0Xcnvsx"
-            crossorigin="anonymous"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/contrib/auto-render.min.js"
-            integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR"
-            crossorigin="anonymous"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            renderMathInElement(document.body, {
-                delimiters: [
-                    {left: '$$', right: '$$', display: true},
-                    {left: '$', right: '$', display: false},
-                    {left: '\\(', right: '\\)', display: false},
-                    {left: '\\[', right: '\\]', display: true},
-                    {left: "\\begin{equation}", right: "\\end{equation}", display: true},
-                    {left: "\\begin{align}", right: "\\end{align}", display: true},
-                    {left: "\\begin{alignat}", right: "\\end{alignat}", display: true},
-                    {left: "\\begin{gather}", right: "\\end{gather}", display: true},
-                    {left: "\\begin{CD}", right: "\\end{CD}", display: true},
-                ],
-                throwOnError: false
-            });
-        });
-    </script>
-</head>
-
-<body>
-<section class="header-container">
-    <div style="display:flex; justify-content:space-between; align-items:flex-end;">
-        <div>
-            <div class="header-title">
-                MyArxiv
-            </div>
-        </div>
-
-        <div class=icons>
-            <label class="theme-switch" for="checkbox">
-                <input type="checkbox" id="checkbox"/>
-                <i id="theme-icon" class="ri-moon-line" style="font-size: 32px" rel="noopener noreferrer"></i>
-            </label>
-        </div>
-    </div>
-</section>
-
 {{#each days}}
     <section class="day-container">
         <div class="date">
@@ -71,7 +11,7 @@
                     </summary>
                     <div class="details-content">
                         {{#each papers}}
-
+                            {{#if (highlight_title title authors)}}
                                 <article>
                                     <details class="article-expander">
                                         <summary class="article-expander-title">
@@ -96,7 +36,7 @@
                                         {{/if}}
                                     </details>
                                 </article>
-
+                            {{/if}}
                         {{/each}}
                     </div>
                 </details>
@@ -104,15 +44,3 @@
         {{/each}}
     </section>
 {{/each}}
-
-</body>
-
-<footer>
-    <div>
-        <time id="build-timestamp" datetime="{{build_time}}">
-            {{time_format build_time "%F %T %Z"}}
-        </time>
-    </div>
-</footer>
-<script src="index.js"></script>
-</html>
