--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -79,6 +79,7 @@
                     </Summary>
                     <div class="details-content">
                         {{#each papers}}
+                        {{#if (match_title title)}}
                             <article>
                                 <details class="article-expander">
                                     <summary class="article-expander-title">
@@ -103,6 +104,7 @@
                                     {{/if}}
                                 </details>
                             </article>
+                        {{/if}}
                         {{/each}}
                     </div>
                 </details>
