--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -75,7 +75,7 @@
             <article>
                 <details>
                     <Summary>
-                        {{ subject }} <span class="chip" style="font-size: 60%">{{len papers}}</span>
+                        {{ subject }} <span class="chip" style="font-size: 60%">{{count_highlight papers}}</span>
                     </Summary>
                     <div class="details-content">
                         {{#each papers}}
